Scrape lyrics from website if API fails